# CGOL-AI

./: CMakeLists.txt  README.md  api.py  bindings.cpp  cgol.cpp  cgol.hpp  cgoltool.py  test.py
